# gcemeta

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  pub.yml
examples/: dump.rs
examples/dump/: Dockerfile  job.yml  main.rs
src/: error.rs  lib.rs  metadata.rs
