[package]
name = "gcemeta"
version = "0.1.3"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "This library provides access to Google Compute Engine metadata service."
repository = "https://github.com/mechiru/gcemeta"
documentation = "https://docs.rs/gcemeta"
categories = ["api-bindings"]
keywords = ["google", "cloud", "compute", "engine", "metadata"]
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*",
]

[dependencies]
lazy_static = "1.4"
attohttpc = { version = "0.15", default-features = false, features = ["compress"] }
serde_json = "1.0"

[dev-dependencies]
rouille = "3.0"
