[package]
name = "gcemeta"
version = "0.2.2"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "This library provides access to Google Compute Engine metadata service."
repository = "https://github.com/mechiru/gcemeta"
documentation = "https://docs.rs/gcemeta"
categories = ["api-bindings"]
keywords = ["google", "cloud", "compute", "engine", "metadata"]
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*",
]

[dev-dependencies]
tokio = { version = "1.18", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.2" }

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
thiserror = { version = "1.0" }
bytes = { version = "1.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.18", features = ["macros", "time", "sync", "rt"] }
hyper = { version = "0.14", features = ["client", "http1"] }

[features]
default = ["parking_lot", "hyper/tcp"]
parking_lot = ["tokio/parking_lot"]
